force-app/main/default/objects/Account/fields/AV_Age__c.field-meta.xml
<CustomField>
    <fullName>AV_Age__c</fullName>
    <formula>IF( NOT( ISBLANK( PersonBirthdate ) ) ,  
    IF( DATE(2000, MONTH( PersonBirthdate ) , DAY( PersonBirthdate ) ) &lt;=  DATE(2000, MONTH(  TODAY() ) , DAY(  TODAY() ) ) , 
       YEAR( TODAY() ) - YEAR( PersonBirthdate ) , 
       YEAR( TODAY() ) - YEAR( PersonBirthdate ) - 1) 
     , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>