force-app/main/default/objects/Account/fields/AV_AhorroEInversion__c.field-meta.xml
<CustomField>
    <fullName>AV_AhorroEInversion__c</fullName>
    <description>Importe de ahorro e inversión del cliente</description>
    <label>Ahorro e Inversión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>