force-app/main/default/objects/Account/fields/AV_AttentionLevel__c.field-meta.xml
<CustomField>
    <fullName>AV_AttentionLevel__c</fullName>
    <description>Indica el nivel de atención.</description>
    <label>Nivel de atención</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Cliente de alto valor</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cliente a potenciar</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cliente a mantener</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>