force-app/main/default/objects/Account/fields/AV_AttentionModel__c.field-meta.xml
<CustomField>
    <fullName>AV_AttentionModel__c</fullName>
    <description>Indica el modelo de atención.</description>
    <label>Modelo de atención</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Alto potencial</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Potencial</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Puntual</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>inTouch</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Imagin</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Premier</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Premier Senior</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>InTouch Alto Potencial</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>InTouch Potencial</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Privada Base</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Privada Estándar</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Privada Plus</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>RGPD Pendiente</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Cliente de alto valor</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cliente a potenciar</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cliente a mantener</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Potencialㅤ</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Asociado</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>RGPD NO</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Alto Potencialㅤ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>