force-app/main/default/objects/Account/fields/AV_BatchProccessOwners__c.field-meta.xml
<CustomField>
    <fullName>AV_BatchProccessOwners__c</fullName>
    <formula>IF (
    AND( OR( RecordType.DeveloperName  == &apos;CC_Cliente&apos;, RecordType.DeveloperName  == &apos;CC_ClientePA&apos;),
	CONTAINS( Owner.Username, &apos;cli-integration&apos;),
	NOT(ISBLANK(AV_EAPGestor__c)), 
	AV_EAPGestor__r.AV_UsuarioAsociado__r.IsActive 
    ),
    &apos;ToBeProcess&apos;,
    AV_NumPerso__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Proccess Owners</label>
    <type>Text</type>
</CustomField>