force-app/main/default/objects/Account/fields/AV_CanalDeContactoPreferente__c.field-meta.xml
<CustomField>
    <fullName>AV_CanalDeContactoPreferente__c</fullName>
    <description>Canal de contacto preferente del cliente</description>
    <label>Canal de contacto preferente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T</fullName>
                <label>Teléfono</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Muro</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Correo</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Videollamada</label>
            </value>
            <value>
                <fullName>MuroDeprecated</fullName>
                <isActive>false</isActive>
                <label>MuroDeprecated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>