force-app/main/default/objects/Account/fields/AV_CarteraPOT__c.field-meta.xml
<CustomField>
    <fullName>AV_CarteraPOT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cartera POT, campo de tipo checkbox</description>
    <label>Cartera POT</label>
    <type>Checkbox</type>
</CustomField>