force-app/main/default/objects/Account/fields/AV_CentroOperativo__c.field-meta.xml
<CustomField>
    <fullName>AV_CentroOperativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Centro operativo</description>
    <label>Centro Operativo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Centro Operativo)</relationshipLabel>
    <relationshipName>CentroOperativo</relationshipName>
    <type>Lookup</type>
</CustomField>