force-app/main/default/objects/Account/fields/AV_CentroSuperior__c.field-meta.xml
<CustomField>
    <fullName>AV_CentroSuperior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro Superior</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Centro Superior)</relationshipLabel>
    <relationshipName>CentroSuperior</relationshipName>
    <type>Lookup</type>
</CustomField>