force-app/main/default/objects/Account/fields/AV_Cliente__c.field-meta.xml
<CustomField>
    <fullName>AV_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es cliente</label>
    <type>Checkbox</type>
</CustomField>