force-app/main/default/objects/Account/fields/AV_CNAE__c.field-meta.xml
<CustomField>
    <fullName>AV_CNAE__c</fullName>
    <description>Campo para almacenar el código CNAE del cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CNAE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>