force-app/main/default/objects/Account/fields/AV_Colectivos__c.field-meta.xml
<CustomField>
    <fullName>AV_Colectivos__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Colectivos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>