force-app/main/default/objects/Account/fields/AV_Confidencial__c.field-meta.xml
<CustomField>
    <fullName>AV_Confidencial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de confidencialidad del cliente</description>
    <label>Confidencial</label>
    <type>Checkbox</type>
</CustomField>