force-app/main/default/objects/Account/fields/AV_ConfidentialBranch__c.field-meta.xml
<CustomField>
    <fullName>AV_ConfidentialBranch__c</fullName>
    <description>Valor de la oficina de confidencialidad.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Oficina de confidencialidad</label>
    <length>15</length>
    <type>Text</type>
</CustomField>