force-app/main/default/objects/Account/fields/AV_ConstitutionDate__c.field-meta.xml
<CustomField>
    <fullName>AV_ConstitutionDate__c</fullName>
    <description>Fecha creación de la empresa (Cliente jurídico).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Constitución</label>
    <type>Date</type>
</CustomField>