force-app/main/default/objects/Account/fields/AV_ContactNumber__c.field-meta.xml
<CustomField>
    <fullName>AV_ContactNumber__c</fullName>
    <description>Número de contactos teóricos.</description>
    <label>Número de contactos teóricos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>