force-app/main/default/objects/Account/fields/AV_DataTreatment__c.field-meta.xml
<CustomField>
    <fullName>AV_DataTreatment__c</fullName>
    <label>Data Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Finalidad Comercial</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Interés Legítimo</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>No admite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>