force-app/main/default/objects/Account/fields/AV_EAPGestor__c.field-meta.xml
<CustomField>
    <fullName>AV_EAPGestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EAP Gestor</description>
    <label>EAP/Gestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (AV_EAPGestor)</relationshipLabel>
    <relationshipName>AccountsGestor</relationshipName>
    <type>Lookup</type>
</CustomField>