force-app/main/default/objects/Account/fields/AV_Empleado__c.field-meta.xml
<CustomField>
    <fullName>AV_Empleado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el cliente es un empleado</description>
    <label>Empleado</label>
    <type>Checkbox</type>
</CustomField>