force-app/main/default/objects/Account/fields/AV_EmpresaSuperior__c.field-meta.xml
<CustomField>
    <fullName>AV_EmpresaSuperior__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Empresa Superior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>