force-app/main/default/objects/Account/fields/AV_ExperienciaCliente__c.field-meta.xml
<CustomField>
    <fullName>AV_ExperienciaCliente__c</fullName>
    <description>Carita que representa la satisfacción del cliente</description>
    <formula>CASE(AV_Satisfaccion__c, 
     &quot;1&quot;, IMAGE($Setup.AV_IconsFSC__c.AV_Environment__c &amp; $Setup.AV_IconsFSC__c.AV_IconContento__c,    $Setup.AV_IconsFSC__c.AV_LabelContento__c,    25, 25), 
     &quot;2&quot;, IMAGE($Setup.AV_IconsFSC__c.AV_Environment__c &amp; $Setup.AV_IconsFSC__c.AV_IconNeutral__c,     $Setup.AV_IconsFSC__c.AV_LabelNeutral__c,     25, 25),
     &quot;3&quot;, IMAGE($Setup.AV_IconsFSC__c.AV_Environment__c &amp; $Setup.AV_IconsFSC__c.AV_IconDescontento__c, $Setup.AV_IconsFSC__c.AV_LabelDescontento__c, 25, 25),
     IMAGE($Setup.AV_IconsFSC__c.AV_Environment__c &amp; $Setup.AV_IconsFSC__c.AV_IconNoEncuesta__c, $Setup.AV_IconsFSC__c.AV_LabelNoEncuesta__c, 25, 25)						
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experiencia Cliente</label>
    <type>Text</type>
</CustomField>