force-app/main/default/objects/Account/fields/AV_FechaEnmascaramiento__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaEnmascaramiento__c</fullName>
    <description>Fecha para comprobar cuando fue la última vez que los datos fueron enmascarados</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Enmascaramiento</label>
    <type>Date</type>
</CustomField>