force-app/main/default/objects/Account/fields/AV_FechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaNacimiento__c</fullName>
    <formula>IF( NOT(ISBLANK(PersonBirthdate)),
  LPAD(TEXT(DAY(PersonBirthdate)), 2, &apos;0&apos;) &amp; &apos;-&apos; &amp; 
  LPAD(TEXT(MONTH(PersonBirthdate)), 2, &apos;0&apos;) &amp; &apos;-&apos; &amp; 
  TEXT(YEAR(PersonBirthdate)) &amp; 
  &apos; ( &apos; &amp; 
  IF( DATE(2000, MONTH(PersonBirthdate), DAY(PersonBirthdate)) &lt;= DATE(2000, MONTH(TODAY()), DAY(TODAY())),
     TEXT(YEAR(Today()) - YEAR (PersonBirthdate)),
     TEXT(YEAR(Today()) - YEAR (PersonBirthdate) -1 ))
  &amp; &apos; Años )&apos;
,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de nacimiento</label>
    <type>Text</type>
</CustomField>