force-app/main/default/objects/Account/fields/AV_FechaPrevIncumple__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaPrevIncumple__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha prevista de incumplimiento</label>
    <type>Date</type>
</CustomField>