force-app/main/default/objects/Account/fields/AV_FechaRefrescoAlertas__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaRefrescoAlertas__c</fullName>
    <description>Campo para almacenar la fecha de último refresco de las alertas del cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de refresco de Alertas</label>
    <type>DateTime</type>
</CustomField>