force-app/main/default/objects/Account/fields/AV_FechaRefrescoCanales__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaRefrescoCanales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de refresco de Canales</label>
    <type>DateTime</type>
</CustomField>