force-app/main/default/objects/Account/fields/AV_FechaRefrescoClientePremium__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaRefrescoClientePremium__c</fullName>
    <description>Campo para almacenar la fecha de último refresco de los datos del cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de refresco Cliente Premium</label>
    <type>DateTime</type>
</CustomField>