force-app/main/default/objects/Account/fields/AV_FechaRefrescoGDPR__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaRefrescoGDPR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de refresco de GDPR</label>
    <type>DateTime</type>
</CustomField>