force-app/main/default/objects/Account/fields/AV_Financiacion__c.field-meta.xml
<CustomField>
    <fullName>AV_Financiacion__c</fullName>
    <description>Importe de financiación del cliente</description>
    <label>Financiación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>