force-app/main/default/objects/Account/fields/AV_Group__c.field-meta.xml
<CustomField>
    <fullName>AV_Group__c</fullName>
    <label>Grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interlocutor</fullName>
            </value>
            <value>
                <fullName>Sin grupo</fullName>
            </value>
            <value>
                <fullName>Miembro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>