force-app/main/default/objects/Account/fields/AV_Idioma__c.field-meta.xml
<CustomField>
    <fullName>AV_Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>002</fullName>
                <label>Castellano</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>Catalán</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Euskera</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Euskera/castellano</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Valenciano</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Gallego</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>Inglés</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>Alemán</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>Arabe</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>Búlgaro</label>
            </value>
            <value>
                <fullName>028</fullName>
                <label>Checo</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>Chino</label>
            </value>
            <value>
                <fullName>024</fullName>
                <label>Danés</label>
            </value>
            <value>
                <fullName>000</fullName>
                <label>Desconocido</label>
            </value>
            <value>
                <fullName>030</fullName>
                <label>Eslovaco</label>
            </value>
            <value>
                <fullName>026</fullName>
                <label>Finés</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Francés</label>
            </value>
            <value>
                <fullName>029</fullName>
                <label>Griego</label>
            </value>
            <value>
                <fullName>016</fullName>
                <label>Holandés</label>
            </value>
            <value>
                <fullName>031</fullName>
                <label>Húngaro</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>Italiano</label>
            </value>
            <value>
                <fullName>027</fullName>
                <label>Japonés</label>
            </value>
            <value>
                <fullName>025</fullName>
                <label>Noruego</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>Polaco</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>Portugués</label>
            </value>
            <value>
                <fullName>018</fullName>
                <label>Rumano</label>
            </value>
            <value>
                <fullName>023</fullName>
                <label>Ruso</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>Sueco</label>
            </value>
            <value>
                <fullName>032</fullName>
                <label>Turco</label>
            </value>
            <value>
                <fullName>CastellanoDeprecated</fullName>
                <isActive>false</isActive>
                <label>CastellanoDeprecated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>