force-app/main/default/objects/Account/fields/AV_IndicadorAsesorado__c.field-meta.xml
<CustomField>
    <fullName>AV_IndicadorAsesorado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicador Asesorado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>