force-app/main/default/objects/Account/fields/AV_IndicadorDeCumplimiento__c.field-meta.xml
<CustomField>
    <fullName>AV_IndicadorDeCumplimiento__c</fullName>
    <formula>IF(AV_RealContactNumber__c &lt; AV_ContactNumber__c, IMAGE($Setup.AV_IconsFSC__c.AV_Environment__c &amp; $Setup.AV_IconsFSC__c.AV_RedIndicatorIcon__c, $Label.CIBE_CumplimientoPositivo, 25, 16) &amp; &apos; &apos; &amp; TEXT(AV_RealContactNumber__c) &amp; &apos;/&apos; &amp; TEXT(AV_ContactNumber__c) &amp; &apos; &apos; &amp; $Label.CIBE_Ultimos12Meses, IMAGE($Setup.AV_IconsFSC__c.AV_Environment__c &amp; $Setup.AV_IconsFSC__c.AV_GreenIndicatorIcon__c, $Label.CIBE_CumplimientoNegativo, 25, 16) &amp; &apos; &apos; &amp;TEXT(AV_RealContactNumber__c) &amp; &apos;/&apos; &amp; TEXT(AV_ContactNumber__c) &amp; &apos; &apos; &amp; $Label.CIBE_Ultimos12Meses)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador de cumplimiento</label>
    <type>Text</type>
</CustomField>