force-app/main/default/objects/Account/fields/AV_IndicadoresClientes__c.field-meta.xml
<CustomField>
    <fullName>AV_IndicadoresClientes__c</fullName>
    <description>obtener los indicadores de los clientes, para todos los tipos de clientes</description>
    <label>Indicadores de cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ImaginTeen</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>AgroBank</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Entidades Sociales</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Orden religiosa</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>DayOne</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Partido politico</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>HolaBank</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>InTouch</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Turismo</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Accionista CaixaBank</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>ImaginBank</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Real State</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Autonomo</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>ICO (Contigo mas que nunca)</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>NEG-BPE</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Comercializacion seguros Bankia</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Universo Consumo</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Intouch Premier</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Food&amp;Drinks</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>MyBox</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Pharma</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>FeelGood</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Senior</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Cliente sin consentimientos GDPR</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Funcionarios y empleados públicos</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Universo Comunidades</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Universo Financiación Empresarial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>