force-app/main/default/objects/Account/fields/AV_Ingresos__c.field-meta.xml
<CustomField>
    <fullName>AV_Ingresos__c</fullName>
    <formula>MAX( AV_IngresosPension__c , AV_IngresosPersonales__c , AV_IngresosProfesionales__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ingresos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>