force-app/main/default/objects/Account/fields/AV_IngresosPersonales__c.field-meta.xml
<CustomField>
    <fullName>AV_IngresosPersonales__c</fullName>
    <description>Ingresos personales</description>
    <label>Ingresos personales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>