force-app/main/default/objects/Account/fields/AV_IngresosProfesionales__c.field-meta.xml
<CustomField>
    <fullName>AV_IngresosProfesionales__c</fullName>
    <description>Ingresos profesionales</description>
    <label>Ingresos profesionales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>