force-app/main/default/objects/Account/fields/AV_InterlocName__c.field-meta.xml
<CustomField>
    <fullName>AV_InterlocName__c</fullName>
    <description>Nombre del interlocutor.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre del interlocutor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>