force-app/main/default/objects/Account/fields/AV_Interlocutor__c.field-meta.xml
<CustomField>
    <fullName>AV_Interlocutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interlocutor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Interlocutor)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>