force-app/main/default/objects/Account/fields/AV_IsPreconceived__c.field-meta.xml
<CustomField>
    <fullName>AV_IsPreconceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preconcedido</label>
    <type>Checkbox</type>
</CustomField>