force-app/main/default/objects/Account/fields/AV_JSONAlertas__c.field-meta.xml
<CustomField>
    <fullName>AV_JSONAlertas__c</fullName>
    <description>Campo para almacenar el JSON de respuesta de la API de Avisos del Cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON Alertas</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>