force-app/main/default/objects/Account/fields/AV_JSONClientePremium__c.field-meta.xml
<CustomField>
    <fullName>AV_JSONClientePremium__c</fullName>
    <description>Campo para almacenar el JSON de respuesta de la API de Cliente Premium</description>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON Cliente Premium</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>