force-app/main/default/objects/Account/fields/AV_JSONGDPR__c.field-meta.xml
<CustomField>
    <fullName>AV_JSONGDPR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON GDPR</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>