force-app/main/default/objects/Account/fields/AV_JSONMapaProducto__c.field-meta.xml
<CustomField>
    <fullName>AV_JSONMapaProducto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON Mapa Producto</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>