force-app/main/default/objects/Account/fields/AV_LastContact__c.field-meta.xml
<CustomField>
    <fullName>AV_LastContact__c</fullName>
    <formula>IF(NOT(ISNULL(AV_LastContactDate__c)),(TEXT(DAY(DATEVALUE(AV_LastContactDate__c))) &amp; &apos;/&apos; &amp; TEXT(MONTH(DATEVALUE(AV_LastContactDate__c))) &amp; &apos;/&apos; &amp; TEXT(YEAR(DATEVALUE(AV_LastContactDate__c))) &amp; MID(TEXT( AV_LastContactDate__c), LEN(TEXT( AV_LastContactDate__c)) - 9, 6) &amp; &apos; - &apos; &amp; AV_TypeEvent__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Última Cita</label>
    <type>Text</type>
</CustomField>