force-app/main/default/objects/Account/fields/AV_LastContactDate__c.field-meta.xml
<CustomField>
    <fullName>AV_LastContactDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Último Contacto Fecha</label>
    <type>DateTime</type>
</CustomField>