force-app/main/default/objects/Account/fields/AV_MatriculaResponsable1__c.field-meta.xml
<CustomField>
    <fullName>AV_MatriculaResponsable1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Responsable 1)</relationshipLabel>
    <relationshipName>Responsable1</relationshipName>
    <type>Lookup</type>
</CustomField>