force-app/main/default/objects/Account/fields/AV_Muro__c.field-meta.xml
<CustomField>
    <fullName>AV_Muro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contactador por muro</description>
    <label>Muro</label>
    <type>Checkbox</type>
</CustomField>