force-app/main/default/objects/Account/fields/AV_MyBox__c.field-meta.xml
<CustomField>
    <fullName>AV_MyBox__c</fullName>
    <description>Campo que CLI informará para saber si el cliente tiene My Box</description>
    <label>MyBox</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Sí</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>