force-app/main/default/objects/Account/fields/AV_NIF__c.field-meta.xml
<CustomField>
    <fullName>AV_NIF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>