force-app/main/default/objects/Account/fields/AV_NombresColectivos__c.field-meta.xml
<CustomField>
    <fullName>AV_NombresColectivos__c</fullName>
    <description>Guarda los nombres de los colectivos del cliente.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Colectivos</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>