force-app/main/default/objects/Account/fields/AV_NumeroCentroCaixaBank__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroCentroCaixaBank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número de centro Caixa Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>