force-app/main/default/objects/Account/fields/AV_NumIndicadores__c.field-meta.xml
<CustomField>
    <fullName>AV_NumIndicadores__c</fullName>
    <description>Número de indicadores</description>
    <label>Número de indicadores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>