force-app/main/default/objects/Account/fields/AV_NumIndicadoresFinancieros__c.field-meta.xml
<CustomField>
    <fullName>AV_NumIndicadoresFinancieros__c</fullName>
    <description>Número de indicadores financieros</description>
    <label>Número de indicadores financieros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>