force-app/main/default/objects/Account/fields/AV_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>AV_NumPerso__c</fullName>
    <description>AV_Numperso de la cuenta</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>AV_Numperso de la cuenta</inlineHelpText>
    <label>NumPerso AV</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>