force-app/main/default/objects/Account/fields/AV_OfficeManager__c.field-meta.xml
<CustomField>
    <fullName>AV_OfficeManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que se rellenara con el datapipelines con el centro gestor</description>
    <label>Oficina Gestor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Oficina Gestor)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>