force-app/main/default/objects/Account/fields/AV_OficinaPrincipal__c.field-meta.xml
<CustomField>
    <fullName>AV_OficinaPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oficina principal del cliente</description>
    <label>Oficina Principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (AV_OficinaPrincipal)</relationshipLabel>
    <relationshipName>AccountsOficina</relationshipName>
    <type>Lookup</type>
</CustomField>